--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1011,7 +1011,7 @@
 	- Core fonts were updated.
 
 5.9.123 (2011-10-02)
-	- The method addTTFfont() wad added to automatically convert TTF fonts (check the new fonts guide at http://www.tcpdf.org).
+	- The method addTTFfont() wad added to automatically convert TTF fonts (check the new fonts guide at https://limepdf.com).
 	- Old font utils were removed.
 	- All fonts were updated and new arabic fonts were added (almohanad were removed and replaced by aefurat and aealarabiya).
 	- The file unicode_data.php was updated.
@@ -1336,7 +1336,7 @@
 5.9.030 (2010-12-16)
 	- Several source code documentation errors were fixed.
 	- Source code style was changed for Doxygen.
-	- Source code documentation was moved online to http://www.tcpdf.org
+	- Source code documentation was moved online to https://limepdf.com
 
 5.9.029 (2010-12-04)
 	- The $fitbox parameter on Image() method was extended to specify image alignment inside the box (check the example n. 9).
@@ -2972,7 +2972,7 @@
 2.2.004 (2008-03-04)
 	- Several examples were added.
 	- AddPage() Header() and Footer() were fixed.
-	- Documentation is now available on http://www.tcpdf.org
+	- Documentation is now available on https://limepdf.com
 
 2.2.003 (2008-03-03)
 	- [1894853] Performance of MultiCell() was improved.
